# AuroreEngine

./: CMakeLists.txt  CMakePresets.json  LICENSE.examples  README.md  VulkanMemoryAllocator-Hpp.patch  vcpkg.json
cmake/: AddShader.cmake  PatchVmaHpp.cmake
examples/: CMakeLists.txt  font_renderer.cpp  gui_renderer.cpp  image_renderer.cpp  input.cpp  simple.cpp  simple_renderer.cpp  transparency.cpp
shaders/: CMakeLists.txt  font_renderer.compat.vert  font_renderer.frag  font_renderer.geom  font_renderer.vert  image_renderer.compat.frag  image_renderer.frag  image_renderer.glass.frag  image_renderer.vert  simple_renderer.frag  simple_renderer.vert
src/: CMakeLists.txt  debug.cppm  dreamrender.cppm  gui_renderer.cppm  implementations.cpp  input.cppm  model.cppm  phase.cpp  phase.cppm  resource_loader.cpp  resource_loader.cppm  shaders.cpp  shaders.cppm  texture.cppm  utils.cppm  window.cppm
src/components/: font_renderer.cppm  image_renderer.cppm  simple_renderer.cppm
